Moved colors of new header/sidepanel design to colors.scss.

--- a/forum/styles/nexus/theme/colours.scss
+++ b/forum/styles/nexus/theme/colours.scss
@@ -39,11 +39,12 @@ hr {
 /* Main blocks
 --------------------------------------------- */
 
-body>header {
+.welcome-img
+{
 	border-bottom-color: $main-colour;
 }
 
-#big-wrapper>footer {
+#footer {
 	border-top-color: $main-colour;
 }
 
